@@ -8,7 +8,7 @@ compileJava.options.encoding = 'UTF-8'
 javadoc.options.encoding = 'UTF-8'  
 
 archivesBaseName = 'InMethodJakarta'
-version = 'v3.4b1-SNAPSHOT-20230825'
+version = 'v3.4b1-SNAPSHOT-20230831'
 
 
 repositories {
